# dolphin-js

./: CMakeLists.txt  package.json
src/: binding.cpp  dol.hpp  dolLoader.cpp  main.cpp  pointerWrap.cpp  pointerWrap.hpp  util.cpp  util.hpp  valueConverter.hpp
src/binding/: AddressSpace.cpp  Config.cpp  Core.cpp  DolphinAnalytics.cpp  GuiApplication.cpp  GuiHost.cpp  GuiMainWindow.cpp  GuiResources.cpp  GuiSettings.cpp  GuiTranslation.cpp  Gui_Application.cpp  Gui_MainWindow.cpp  Gui_Q_Action.cpp  Gui_Q_Action.hpp  Gui_Q_CommonDialogs.cpp  Gui_Q_Menu.cpp  Gui_Q_Menu.hpp  Gui_Q_MenuBar.cpp  Gui_Q_MenuBar.hpp  Gui_Q_MenuEtc.cpp  Gui_Settings.cpp  JitInterface.cpp  Memory.cpp  Pad.cpp  State.cpp  UICommon.cpp  UICommon_GameFile.cpp  UICommon_GameFile.hpp  Util.cpp
types/: addon.d.ts
